--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                                 random text. It has roots in a piece of classical Latin literature 
                                 from 45 BC, making it over 2000 years old</p>
-                                <button class="btn1">Watch Live<i class="fa-solid fa-greater-than"></i></button>
+                                <a href="index2.html"><button class="btn1">Watch Live<i class="fa-solid fa-greater-than"></i></button></a>
 
                     </div>
                     <div class="right">
@@ -95,7 +95,7 @@
                         over Kimpenbe transfer</p>
                         <p><i class="fa-solid fa-clock"></i>10h <i class="fa-solid fa-comment-sms"></i>23</p>
                     </div>
-                    <div class="blog">
+                    <div class="blog blog-9">
                         <img src="Blog Image.png" alt="">
                     <p><button class="t-btn">Transfer</button></p>
                     <p>Transfer Live: Chlesea in talks 
@@ -106,6 +106,9 @@
             </div>
         </section>
     </main>
+    <div class="view">
+        <button class="view-btn">View All</button>
+    </div>
     <footer>
         <h1 class="big">Goal</h1>
         <!-- <hr> -->
