--- a/index2.html
+++ b/index2.html
@@ -17,11 +17,8 @@
                         <h1 class="big-title">The Greatest 
                             show on the 
                             earth</h1>
-                            <p class="title-discribe">Contrary to popular belief, Lorem Ipsum is not simply 
-
-                                random text. It has roots in a piece of classical Latin literature 
-                                from 45 BC, making it over 2000 years old</p>
-                                <button class="btn1">Watch Live<i class="fa-solid fa-greater-than"></i></button>
+                            <p class="title-discribe">The Qatar 2022 FIFA World Cup bid was a bid by Qatar to host the 2022 FIFA World Cup. With a population of 2 million people, Qatar will be the first Arab state to host the World Cup</p>
+                                <a href="index.html"><button class="btn1">Watch Live<i class="fa-solid fa-greater-than"></i></button></a>
 
                     </div>
                     <div class="right">
