--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="center-left">
                     <p><button class="simple-btn">Upcoming Match</button></p>
                     <p><button class="simple-btn">All Group</button></p>
-                    <p><button class="selected-btn">Blog</button>
+                    <a href="index2.html"><p><button class="selected-btn">Blog</button></a>
                     </p>
                 </div>
                 <div class="center-right">
