--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
             <section>
                 <div class="center">
                     <div class="center-left">
-                        <p><button class="selected-btn">Upcoming Match</button></p>
+                        <a href="index.html"><p><button class="selected-btn">Upcoming Match</button></p></a>
                         <p><button class="simple-btn">All Group</button></p>
                         <p><button class="simple-btn">Blog</button>
                         </p>
