--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
                         <h1 class="big-title">The Greatest 
                             show on the 
                             earth</h1>
-                            <p class="title-discribe">The Qatar 2022 FIFA World Cup bid was a bid by Qatar to host the 2022 FIFA World Cup. With a population of 2 million people, Qatar will be the first Arab state to host the World Cup</p>
+                            <p class="title-discribe">The Qatar 2022 FIFA World Cup bid was a bid by Qatar to host the 2022 FIFA World Cup. With a population of 2 million people, </p>
                                 <a href="index.html"><button class="btn1">Watch Live<i class="fa-solid fa-greater-than"></i></button></a>
 
                     </div>
