--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <div class="center">
                 <div class="center-left">
-                    <p><button class="simple-btn">Upcoming Match</button></p>
+                    <p><a href="index2.html"><button class="simple-btn">Upcoming Match</button></a></p>
                     <p><button class="simple-btn">All Group</button></p>
                     <a href="index2.html"><p><button class="selected-btn">Blog</button></a>
                     </p>
@@ -130,10 +130,10 @@
             </div>
         </div>
         <div class="footer-icons">
-            <div><i class="fa-brands fa-facebook"></i></div>
-            <div><i class="fa-brands fa-instagram"></i></div>
-            <div><i class="fa-brands fa-twitter"></i></div>
-            <div><i class="fa-brands fa-linkedin"></i></div>
+            <div><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></i></div>
+            <div><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></div>
+            <div><a href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a></div>
+            <div><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a></div>
         </div>
     </footer>
 </body>
