--- a/index2.html
+++ b/index2.html
@@ -169,10 +169,10 @@
                     </div>
                 </div>
                 <div class="footer-icons">
-                    <div><i class="fa-brands fa-facebook"></i></div>
-                    <div><i class="fa-brands fa-instagram"></i></div>
-                    <div><i class="fa-brands fa-twitter"></i></div>
-                    <div><i class="fa-brands fa-linkedin"></i></div>
+                    <div><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></div>
+                    <div><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></div>
+                    <div><a href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a></div>
+                    <div><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a></div>
                 </div>
             </footer>
 </body>
